# rims4ltlf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: maxsyft_h_tire_1.ltlf  maxsyft_h_tire_10.ltlf  maxsyft_h_tire_11.ltlf  maxsyft_h_tire_12.ltlf  maxsyft_h_tire_13.ltlf  maxsyft_h_tire_14.ltlf  maxsyft_h_tire_15.ltlf  maxsyft_h_tire_2.ltlf  maxsyft_h_tire_3.ltlf  maxsyft_h_tire_4.ltlf  maxsyft_h_tire_5.ltlf  maxsyft_h_tire_6.ltlf  maxsyft_h_tire_7.ltlf  maxsyft_h_tire_8.ltlf  maxsyft_h_tire_9.ltlf  results.py  rims_h_tire_1.ltlf  rims_h_tire_10.ltlf  rims_h_tire_11.ltlf  rims_h_tire_12.ltlf  rims_h_tire_13.ltlf  rims_h_tire_14.ltlf  rims_h_tire_15.ltlf  rims_h_tire_2.ltlf  rims_h_tire_3.ltlf  rims_h_tire_4.ltlf  rims_h_tire_5.ltlf  rims_h_tire_6.ltlf  rims_h_tire_7.ltlf  rims_h_tire_8.ltlf  rims_h_tire_9.ltlf  run_h_maxsyft.sh  run_h_rims.sh  tire_problem.pddl
example/: scenario_1.ltlf  scenario_1.pddl  scenario_2.ltlf  scenario_2.pddl
src/: CMakeLists.txt  maxsyft.cpp  rims.cpp  rimsBenchs.cpp
src/parser/: spotparser.cpp  spotparser.h
src/synthesis/header/: Domain.h  IntentMgr.h  MaximallyPermissiveSynthesizer.h  ReachabilityMaxSetSynthesizer.h  SymbolicStateDfa.h  Synthesizer.h  Transducer.h  Utils.h  VarMgr.h
src/synthesis/source/: Domain.cpp  IntentMgr.cpp  MaximallyPermissiveSynthesizer.cpp  ReachabilityMaxSetSynthesizer.cpp  SymbolicStateDfa.cpp  Utils.cpp  VarMgr.cpp
